# VrtoolDashboard

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.config/: environment.yml  tc_environment.yml
.devcontainer/: environment.yml
.github/workflows/: ci_installation.yml  normalize_code.yml
cache/: cache.db  cache.db-shm  cache.db-wal
docs/: CHANGELOG.md  CONTRIBUTING.md  notes.MD
src/: app.py  component_ids.py  constants.py  index.py  mapbox_token.txt  sandbox.py  vrtool_logger_custom.py
src/assets/: custom.css  script.js  style.css
src/cache/: cache.db
src/callbacks/: callbacks_main_page.py
src/callbacks/comparison_page/: callback_import_run.py  callback_tabs_output_switch.py
src/callbacks/database_interaction_page/: callback_custom_measure.py  callback_optimize.py  callback_tabs_switch_database.py
src/callbacks/project_page/: callback_create_projects.py  callback_import_run.py  callback_project_definition_output.py  callback_project_output_tabs.py  callback_save_and_load_projects.py  callback_tabs_output_switch.py  callback_tabs_switch_project_page.py
src/callbacks/traject_page/: callback_download_geojson.py  callback_optimize.py  callback_renderer.py  callback_tabs_switch.py  callbacks_main_page.py  callbacks_tab_content.py
src/components/: layout_main_page.py  navigation_bar.py  upload_dike_files.py
src/layouts/: layout_collasping_menus.py  layout_dike_settings.py  layout_download_buttons.py  layout_main_page.py  layout_modal_optimize.py  layout_navigation_bar.py  layout_radio_items.py  layout_sliders.py  layout_upload_dike_files.py  layout_vr_optimalization.py  sandbvox_orm.py
src/layouts/layout_comparison_page/: layout_comparison_page_tab.py  layout_output_tabs.py  layout_table_comparison.py  layout_table_comparison_order_section.py
src/layouts/layout_database_interaction/: layout_custom_measures_table.py  layout_modal_add_custom_measure.py  layout_vr_optimalization.py
src/layouts/layout_project_page/: layout_project_definition_tab.py  layout_project_visualization_tab.py
src/layouts/layout_traject_page/: layout_collasping_menus.py  layout_dike_settings.py  layout_download_buttons.py  layout_main_page.py  layout_modal_measure.py  layout_modal_optimize.py  layout_navigation_bar.py  layout_radio_items.py  layout_sliders.py  layout_upload_dike_files.py
src/linear_objects/: base_linear.py  dike_section.py  dike_traject.py  project.py  reinforcement_program.py  traject.py
src/orm/: api.py  import_database.py  orm_controller_custom.py
src/orm/importers/: custom_measures_importer.py  dike_section_importer.py  dike_traject_importer.py  importer_utils.py  measure_reliability_time_importer.py  measures_importer.py  optimization_run_importer.py  optimization_step_importer.py  solution_importer.py
src/orm/models/: __init__.py  computation_scenario_result.py  dike_traject_info.py  greedy_optimization_order.py  measure_cost.py  measure_reliability.py  modified_measure.py  target_reliability_based_order.py
src/pages/: comparison_run_page.py  database_interaction_page.py  home.py  not_found_404.py  project_page.py  traject_page.py
src/plotly_graphs/: measure_comparison_graph.py  measure_reliability_time.py  pf_length_cost.py  plotly_maps.py
src/plotly_graphs/comparison_page/: plot_measures_comparison_map.py
src/plotly_graphs/project_page/: pf_traject_comparison.py  plotly_maps.py  plotly_plots.py
src/sandboxing/: modify_reference_file.py  postprocessing_nb.py  sandbox.py  sandbox_custom_measures.py  sandbox_db2.py  sandbox_distri.py  sandbox_import_all_measures.py  sandbox_import_custom_measure.py  sandbox_load_from_db.py  sandbox_load_from_json.py  sandbox_reliability_over_time.py  sandbox_run_optimize.py  sandbox_run_optimize_with_custom.py
src/sandboxing/cache/: cache.db
src/sandboxing/project_page/: imported_runs_data.json  project_overview_data.json  sandbox_comparison_runs.py  sandbox_cost_project.py  sandbox_project_map_result.py  sandbox_risk_table.py
src/utils/: data.json  database_analytics.py  generate_output.py  gws_convertor.py  importers.py  shapely_utils.py  traject_probability.py  utils.py  vrutils.py
tests/: __init__.py  test_utils.py
tests/cache/: cache.db
tests/data/: imported_runs_data.json  project_data.json  projects_overview_data.json  projects_overview_data_new.json  serialized_traject_38_1_mini.json
tests/data/10-1/: dike_traject_10-1_Basisberekening.json  dike_traject_10-1_Basisberekening_base.json  dike_traject_10-1_Basisberekening_omega.json  dike_traject_10-1_Basisberekening_omega_45.json
tests/data/31-1 base coastal case/: config.json  dike_traject_31-1_Basisberekening.json  vrtool_input.db
tests/data/38-1 base river case/: config.json  vrtool_input.db
tests/data/38-1 custom measures/: config.json  dike_traject.json
tests/data/Case 7-2/: 7-2.geojson  config.json
tests/data/Case_10_3/: config.json
tests/data/Case_16_1/: 16_1_results4.db  additional info.txt  config.json
tests/data/Case_24_3/: 24-3.geojson  24-3_results_vrtool_0_1_1.db  config.json
tests/data/Case_31_1/: 10-3.geojson  config.json
tests/data/Case_38_1/: config.json
tests/test_callbacks/: test_callback_create_projects.py  test_callback_download_geojson.py  test_callback_optimize.py  test_callback_tabs_switch.py  test_callbacks_main.py  test_callbacks_measure_plots.py  test_callbacks_tab_content.py
tests/test_database_interaction/: test_run_optimize.py
tests/test_linear_objects/: test_dike_traject.py
tests/test_orm/: __init__.py  test_orm_controllers.py
tests/test_plotly_figures/: test_pf_cost_figure.py  test_plotly_figure.py  test_plotly_scattermapbox_figures.py  test_plotly_scattermapbox_figures_project_page.py  test_plotly_scattermapbox_figures_traject_page.py
tests/tests_acceptance/: tests_acceptance.py
(+1733 files in other folders)
